# ToTheMoon

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  linux.sh  windows.bat
data/: data_download.py
doc/: Doxyfile
include/: analysis.h  connection.h  crypto_token.h  dataset.h  mapping.h  stats.h  thread_controller.h  to_the_moon.h  transaction.h  utilities.h
src/: to_the_moon.cpp
